# alice-skill-gotovo-ru

./: Makefile  pyproject.toml
alice_gotovo/: cloud_function.py  server.py  skill.py
