[tool.poetry]
name = "alice-skill-gotovo-ru"
version = "0.1.0"
description = ""
authors = ["Dima Boger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
firebase = "^3.0.1"
pydantic = "^1.7.3"
fastapi = { version = "^0.62.0", optional = true }

[tool.poetry.extras]
server = ["fastapi"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
